# AStockQuant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  README.md  astock_init.sql  astockquant_tasks_complete.csv  create.bat  pytest.ini
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/Qml/: main.qml  qml.qrc
src/app/Qml/components/: Calendar.qml  DayCell.qml  StatCard.qml  qmldir
src/app/Qml/page/: BacktestPage.qml  DashboardPage.qml  TradeRecordPage.qml  qmldir
src/app/include/: AppBootstrap.h  VasAurora.hpp  VasUI.hpp
src/app/src/: AppBootstrap.cpp  CMakeLists.txt  VasAurora.cpp
src/domain/: CMakeLists.txt
src/domain/data/: CMakeLists.txt
src/domain/data/include/: CsvMarketDataSource.h  IMarketDataSource.h
src/domain/data/src/: CsvMarketDataSource.cpp
src/domain/indicators/: CMakeLists.txt
src/domain/indicators/include/: Indicator.h  SMA.h  SimpleMovingAverage.h
src/domain/indicators/src/: CMakeLists.txt  SMA.cpp  SimpleMovingAverage.cpp
src/domain/market/: CMakeLists.txt
src/domain/market/include/observers/: alert_observer.h  data_observer.h  data_observer_base.h  kline_observer.h  observer_factory.h  storage_observer.h  tick_observer.h
src/domain/market/include/repository/: BaseMarketDataRepository.hpp  IMarketDataRepository.hpp  MemoryMarketDataRepository.hpp  RepositoryConfig.hpp  RepositoryFactory.hpp
src/domain/market/include/utils/: ObjectPool.h
src/domain/market/src/core/: DataProviderFactory.cpp  DataTypes.cpp  MarketData.cpp
src/domain/market/test/: TestRepositoryWithFoundation.cpp  market_demo.cpp  test_datatypes.cpp  test_market.cpp
src/domain/model/: CMakeLists.txt
src/domain/model/include/: Bar.h  BarProvider.h  Order.h  Position.h  Tick.h
src/domain/model/src/: BarProvider.cpp  CMakeLists.txt  Model.cpp
src/domain/signals/: CMakeLists.txt
src/domain/signals/include/: CrossSignal.h  Signal.h  SignalType.h  ThresholdSignal.h
src/domain/signals/src/: CMakeLists.txt  CrossSignal.cpp  ThresholdSignal.cpp
src/domain/strategies/: CMakeLists.txt
src/domain/strategies/include/: ConcreteMAStrategy.h  FixedBarStrategy.h  IStrategy.h  MovingAverageStrategy.h  Position.h  RegisterStrategy.h  SimpleMomentumStrategy.h  Strategy.h  StrategyAction.h  StrategyEvent.h  StrategyFactory.h
src/domain/strategies/src/: CMakeLists.txt  FixedBarStrategy.cpp  MovingAverageStrategy.cpp  Strategies.cpp
src/domain/test/: EventBus 事件总线使用规范与业务逻辑组合流程.rm  test_backtest.cpp
src/engine/: CMakeLists.txt  engine_模块设计说明（readme）.md
src/engine/account/: CMakeLists.txt
src/engine/account/include/: Account.h
src/engine/account/src/: Account.cpp  CMakeLists.txt
src/engine/include/: BacktestEngine.h  BacktestResult.h  BaseInterface.h  CommonTypes.h  DispatchPolicy.h  DispatchWorker.h  Engine.h  EngineContext.h  EngineImpl.h  Event.h  EventBus.h  EventBusImpl.h  EventDispatcher.h  EventQueue.h  EventSubscriber.h  IClock.h  IDataSource.h  IMarketDataProvider.h  ITrigger.h  SubscriptionManager.h  TradeRecord.h
src/engine/src/: BacktestEngine.cpp  BacktestResult.cpp  CMakeLists.txt  DataSource.cpp  DispatchWorker.cpp  Engine.cpp  EngineContext.cpp  EngineImpl.cpp  Event.cpp  EventBusImpl.cpp  EventDispatcher.cpp  EventQueue.cpp  ICock.cpp  Trigger.cpp
src/engine/test/: BacktestEngineTest.cpp  EventBusTest.cpp
src/foundation/: CMakeLists.txt
src/foundation/include/: foundation.h
src/foundation/include/foundation/Fs/: FileWatcher.h  file.hpp  file_reader.hpp  file_writer.hpp  fs.hpp  fs_interface.hpp
src/foundation/include/foundation/Utils/: CacheUtils.h  Timestamp.h  Uuid.h  random.hpp  random_impl.hpp  string.hpp  string_utils.hpp  system.hpp  system_interface.hpp  time.hpp  (+1 more)
src/foundation/json/: CMakeLists.txt
src/foundation/json/src/: CMakeLists.txt  json_facade.cpp
src/foundation/net/: CMakeLists.txt
src/foundation/net/src/: CMakeLists.txt  Net_facade.cpp
src/foundation/public/: CMakeLists.txt
src/foundation/public/include/: foundation.h  foundation_public.h  public.h
src/foundation/public/src/: CMakeLists.txt  foundation.cpp  foundation_public.cpp
src/foundation/src/: CMakeLists.txt  foundation.cpp
src/foundation/src/Fs/: FileWatcher.cpp  Fs.cpp  file.cpp  file_reader.cpp  file_writer.cpp
src/foundation/src/Utils/: CacheUtils.cpp  String.cpp  Uuid.cpp  random.cpp  system.cpp  time.cpp
src/foundation/src/config/: ConfigLoader.cpp  ConfigManager.cpp  ConfigNode.cpp  ConfigParser.cpp  JsonConfigProvider.cpp  JsonParser.cpp  YamlConfigProvider.cpp  YamlParser.cpp
src/foundation/src/core/: exception.cpp
src/foundation/src/json/: json_facade.cpp
src/foundation/src/log/: logger.cpp
src/foundation/src/net/: Net_facade.cpp  http_request_builder.cpp
src/foundation/src/thread/: InlineExecutor.cpp  ThreadExit.cpp  ThreadPoolExecutor.cpp  thread_pool.cpp
src/foundation/src/yaml/: Yaml_facade.cpp
src/foundation/test/: CMakeLists.txt  main.cpp
src/foundation/tests/: ConfigPerformanceTest.cpp  IConfig.h  MockConfig.h  test_base.hpp  test_config.json  test_main.cpp  test_random.cpp  test_thread_pool.cpp  test_timeutils.cpp  test_utils.cpp
src/foundation/tests/mocks/: mock_random.hpp
src/foundation/thread/: CMakeLists.txt
src/foundation/thread/include/: IExecutor.h  InlineExecutor.h  ThreadPoolExecutor.h
src/foundation/thread/src/: CMakeLists.txt  ThreadPoolExecutor.cpp
src/foundation/yaml/: CMakeLists.txt
src/foundation/yaml/include/: Yaml_facade.h
src/foundation/yaml/src/: CMakeLists.txt  Yaml_facade.cpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/include/datasource/: DataSourceChain.h  DataSourceContext.h  DataSourceFactory.h  DatabaseSource.h  FileDataSource.h  IDataSource.h
src/ui/: CMakeLists.txt
src/ui/bridge/: CMakeLists.txt
src/ui/bridge/include/: BacktestController.h  GlobalModels.h  TradeRecordModel.h  TradeRecordModel.moc  moc_BacktestController.cpp  registerQmlTypes.hpp  singleapplication.hpp
src/ui/bridge/src/: BacktestController.cpp  CMakeLists.txt  TradeRecordModel.cpp  registerQmlTypes.cpp
src/ui/controllers/src/: CMakeLists.txt
(+71 files in other folders)
